--- a/JAX-RS/web/index.html
+++ b/JAX-RS/web/index.html
@@ -10,7 +10,7 @@
     <body>
         <div>Right click on the project in the project menu, then click Deploy. That'll start the server</div>
         <div>Right click on the project again, then click Test RESTful Web Services. That should bring up the page?</div>
-        <div>Frantically try to get my attention if that doesn't work I guess</div>
+        <div>Frantically try to get my attention if that doesn't work I guess???</div>
         <br>
         <div>I added a package called WhatsOnStage411 which is where our code will live</div>
     </body>
